testsuite/tests/typing-recmod/t08bad.compilers.reference
File "t08bad.ml", line 10, characters 15-68:
Error: In the definition of B.t, type 'a array A.t should be 'a A.t
